--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,34 @@
 apply plugin: 'war'
 apply plugin: 'jetty'
+apply plugin: 'idea'
+apply plugin: 'rebel'
+
+buildscript {
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        mavenRepo(name: 'zt-public-snapshots',
+                url: 'http://repos.zeroturnaround.com/nexus/content/groups/zt-public/')
+    }
+
+    dependencies {
+        classpath group: 'org.zeroturnaround', name: 'gradle-jrebel-plugin', version: '1.0.3'
+    }
+}
 
 repositories {
-
     mavenCentral()
 }
+
+war.dependsOn(generateRebel)
+
 dependencies {
-    providedCompile "javax.servlet:javax.servlet-api:3.1.0"
-    compile "org.jboss.resteasy:resteasy-links:3.0.1.Final"
+    providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
+    compile 'org.glassfish.jersey.containers:project:2.0'
+    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.0'
+    runtime 'org.jboss.resteasy:resteasy-jaxrs:3.0.1.Final'
+    runtime 'org.glassfish.jersey.containers:project:2.0'
+    runtime 'org.glassfish.jersey.containers:jersey-container-servlet:2.0'
     testCompile "junit:junit:4.11"
 }
 
