--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,16 +3,47 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
     <display-name>jobengine api</display-name>
+    <!--<servlet>-->
+        <!--<servlet-name>Resteasy</servlet-name>-->
+        <!--<servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>-->
+        <!--<init-param>-->
+            <!--<param-name>javax.ws.rs.Application</param-name>-->
+            <!--<param-value>jobengine.api.Adverts</param-value>-->
+        <!--</init-param>-->
+    <!--</servlet>-->
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>Resteasy</servlet-name>-->
+        <!--<url-pattern>/resteasy-api/*</url-pattern>-->
+    <!--</servlet-mapping>-->
+
     <servlet>
-        <servlet-name>Resteasy</servlet-name>
-        <servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
+        <servlet-name>ConfigLiteServices</servlet-name>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
-            <param-name>javax.ws.rs.Application</param-name>
-            <param-value>jobengine.api.Adverts</param-value>
+            <param-name>com.sun.jersey.config.property.packages</param-name>
+            <param-value>jobengine.api</param-value>
         </init-param>
+        <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>Resteasy</servlet-name>
-        <url-pattern>/api/*</url-pattern>
+        <servlet-name>ConfigLiteServices</servlet-name>
+        <url-pattern>/jersey-api/*</url-pattern>
     </servlet-mapping>
+
+    <!--<filter>-->
+        <!--<filter-name>Jersey Filter</filter-name>-->
+        <!--<filter-class>org.glassfish.jersey.servlet.ServletContainer</filter-class>-->
+        <!--<init-param>-->
+            <!--<param-name>jersey.config.server.provider.packages</param-name>-->
+            <!--<param-value>jobengine.api</param-value>-->
+        <!--</init-param>-->
+        <!--<init-param>-->
+            <!--<param-name>jersey.config.servlet.filter.staticContentRegex</param-name>-->
+            <!--<param-value>/.*html</param-value>-->
+        <!--</init-param>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>Jersey Filter</filter-name>-->
+        <!--<url-pattern>/jersey-api/*</url-pattern>-->
+    <!--</filter-mapping>-->
 </web-app>
