--- a/build.gradle
+++ b/build.gradle
@@ -23,13 +23,9 @@ repositories {
 war.dependsOn(generateRebel)
 
 dependencies {
+//    jersey-container-servlet
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
     compile 'org.glassfish.jersey.containers:project:2.0'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.0'
-    runtime 'org.jboss.resteasy:resteasy-jaxrs:3.0.1.Final'
-    runtime 'org.glassfish.jersey.containers:project:2.0'
-    runtime 'org.glassfish.jersey.containers:jersey-container-servlet:2.0'
     testCompile "junit:junit:4.11"
 }
-
-//>http://repository.jboss.org/maven2
