--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,59 +1,20 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-         version="3.0">
-    <!--<display-name>jobengine api</display-name>-->
-    <!--<servlet>-->
-        <!--<servlet-name>Resteasy</servlet-name>-->
-        <!--<servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>-->
-        <!--<init-param>-->
-            <!--<param-name>javax.ws.rs.Application</param-name>-->
-            <!--<param-value>jobengine.api.Adverts</param-value>-->
-        <!--</init-param>-->
-    <!--</servlet>-->
-    <!--<servlet-mapping>-->
-        <!--<servlet-name>Resteasy</servlet-name>-->
-        <!--<url-pattern>/resteasy-api/*</url-pattern>-->
-    <!--</servlet-mapping>-->
-
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+		  http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+         version="2.5">
     <servlet>
-        <servlet-name>ConfigLiteServices</servlet-name>
+        <servlet-name>Jersey REST Service</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
-            <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>jobengine.api</param-value>
+            <param-name>jersey.config.server.provider.packages</param-name>
+            <param-value>example;search</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
-
     <servlet-mapping>
-        <servlet-name>ConfigLiteServices</servlet-name>
-        <url-pattern>/jersey-api/*</url-pattern>
+        <servlet-name>Jersey REST Service</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
-
-
-        <!--<servlet>-->
-            <!--<servlet-name>jobengine.api.JobrapidoAPIConfig</servlet-name>-->
-        <!--</servlet>-->
-        <!--<servlet-mapping>-->
-            <!--<servlet-name>jobengine.api.JobrapidoAPIConfig</servlet-name>-->
-            <!--<url-pattern>/antani</url-pattern>-->
-        <!--</servlet-mapping>-->
-
-    <!--<filter>-->
-        <!--<filter-name>Jersey Filter</filter-name>-->
-        <!--<filter-class>org.glassfish.jersey.servlet.ServletContainer</filter-class>-->
-        <!--<init-param>-->
-            <!--<param-name>jersey.config.server.provider.packages</param-name>-->
-            <!--<param-value>jobengine.api</param-value>-->
-        <!--</init-param>-->
-        <!--<init-param>-->
-            <!--<param-name>jersey.config.servlet.filter.staticContentRegex</param-name>-->
-            <!--<param-value>/.*html</param-value>-->
-        <!--</init-param>-->
-    <!--</filter>-->
-    <!--<filter-mapping>-->
-        <!--<filter-name>Jersey Filter</filter-name>-->
-        <!--<url-pattern>/jersey-api/*</url-pattern>-->
-    <!--</filter-mapping>-->
 </web-app>
