--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'idea'
 apply plugin: 'java'
 apply plugin: 'jetty'
 
-sourceCompatibility = 1.7
+sourceCompatibility = 1.6
 jettyRun.contextPath = '/'
 
 repositories {
@@ -12,5 +12,5 @@ repositories {
 dependencies {
     compile 'org.glassfish.jersey.containers:project:2.0'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.0'
-    compile 'org.glassfish.jersey.containers:jersey-container-grizzly2-http:2.0'
+    //compile 'org.glassfish.jersey.containers:jersey-container-grizzly2-http:2.0'
 }
