--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,9 @@ repositories {
 dependencies {
     compile 'org.glassfish.jersey.containers:project:2.0'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.0'
-    //compile 'org.glassfish.jersey.containers:jersey-container-grizzly2-http:2.0'
+    compile 'org.glassfish.jersey.containers:jersey-container-grizzly2-http:2.0'
+    compile 'com.google.code.gson:gson:2.2.4'
+    testCompile 'com.restfuse:com.eclipsesource.restfuse:1.2.0'
+    testCompile 'junit:junit:4.11'
+    testCompile 'org.eclipse.jetty:jetty-server:9.0.4.v20130625'
 }
