--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,9 @@ dependencies {
     compile 'org.glassfish.jersey.containers:project:2.0'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.0'
     compile 'org.glassfish.jersey.containers:jersey-container-grizzly2-http:2.0'
+    runtime 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.2.1'
+    compile 'org.slf4j:slf4j-simple:1.5.6'
+    compile 'org.eclipse.jetty:jetty-webapp:8.1.9.v20130131'   // providedCompile?
+    compile 'com.wordnik:swagger-core_2.9.1:1.2.5'
+    compile 'com.wordnik:swagger-jaxrs_2.9.1:1.2.5'
 }
