--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>example;search;com.wordnik.swagger.jaxrs.listing</param-value>
+            <param-value>example;search</param-value>
         </init-param>
         <init-param>
             <param-name>swagger.api.basepath</param-name>
