--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,12 @@ dependencies {
     compile 'org.glassfish.jersey.containers:project:2.0'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.0'
     compile 'com.google.code.gson:gson:2.2.4'
-    compile 'org.slf4j:slf4j-simple:1.5.6'
     compile 'com.wordnik:swagger-core_2.9.1:1.2.5'
     compile 'com.wordnik:swagger-jaxrs_2.9.1:1.2.5'
     runtime 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.2.1'
     providedCompile 'org.eclipse.jetty:jetty-servlet:8.1.9.v20130131'
     testCompile 'com.restfuse:com.eclipsesource.restfuse:1.2.0'
     testCompile 'junit:junit:4.11'
+    testCompile 'org.eclipse.jetty:jetty-webapp:8.1.9.v20130131'
 
 }
