Brutto Giancarlo brutto!!!

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ notifications:
  email:
    recipients:
      - giancarlo.pace@jobrapido.com
-     - emanuele.cantelli@jobrapido.com
+     - michele.cantelli@jobrapido.com
