--- a/build.gradle
+++ b/build.gradle
@@ -5,25 +5,21 @@ apply plugin: 'jetty'
 sourceCompatibility = 1.6
 jettyRun.contextPath = '/'
 
-repositories {
-    mavenCentral()
+repositories { mavenCentral() }
+
+configurations {
+    all*.exclude group: 'com.sun.jersey'
+    all*.exclude group: 'javax.inject', module: 'javax.inject', version: '1'
+    all*.exclude module: 'jsr311-api'
+
 }
 
 dependencies {
-    compile('org.glassfish.jersey.containers:project:2.0') {
-        exclude(group: 'javax.inject')
-    }
-
-    compile('com.wordnik:swagger-jaxrs_2.9.1:1.2.5') {
-        exclude group: 'com.sun.jersey'
-        exclude name: 'jsr311-api'
-    }
+    compile 'org.glassfish.jersey.containers:project:2.0'
+    compile 'com.wordnik:swagger-jaxrs_2.9.1:1.2.5'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.0'
-    compile('com.wordnik:swagger-core_2.9.1:1.2.5') {
-        exclude group: 'com.fasterxml.jackson.jaxrs'
-    }
+    compile 'com.wordnik:swagger-core_2.9.1:1.2.5'
     runtime 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.2.1'
-
     providedCompile 'org.eclipse.jetty:jetty-servlet:8.1.9.v20130131'
     testCompile 'com.restfuse:com.eclipsesource.restfuse:1.2.0'
     testCompile 'junit:junit:4.11'
