--- a/build.gradle
+++ b/build.gradle
@@ -6,23 +6,24 @@ sourceCompatibility = 1.6
 jettyRun.contextPath = '/'
 
 repositories { mavenCentral() }
-
-configurations {
-    all*.exclude group: 'com.sun.jersey'
-    all*.exclude group: 'javax.inject', module: 'javax.inject', version: '1'
-    all*.exclude module: 'jsr311-api'
-
-}
+//
+//configurations {
+//    all*.exclude group: 'com.sun.jersey'
+//    all*.exclude group: 'javax.inject', module: 'javax.inject', version: '1'
+//    all*.exclude module: 'jsr311-api'
+//
+//}
 
 dependencies {
-    fileTree(dir: 'libs', includes: ['*.jar'])
-//    compile 'ch.qos.logback:logback-classic:1.0.13'
-    compile 'org.springframework:spring-mvc:3.2.3.RELEASE'
+    compile 'ch.qos.logback:logback-classic:1.0.13'
+    compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
     compile 'com.mangofactory:swagger-springmvc:0.5.3'
-    runtime 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.2.1'
+    runtime 'com.fasterxml.jackson.core:jackson-databind:2.2.2'
+    runtime 'javax.xml.bind:jaxb-api:2.2.9'
     providedCompile 'org.eclipse.jetty:jetty-servlet:8.1.9.v20130131'
     testCompile 'com.restfuse:com.eclipsesource.restfuse:1.2.0'
     testCompile 'junit:junit:4.11'
     testCompile 'org.eclipse.jetty:jetty-webapp:8.1.9.v20130131'
+    testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
 
 }
