--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,40 +8,13 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath:spring-rest.xml</param-value>
     </context-param>
-
-    <!--<listener>-->
-        <!--<listener-class>-->
-            <!--org.springframework.web.context.ContextLoaderListener-->
-        <!--</listener-class>-->
-    <!--</listener>-->
-    <!--<context-param>-->
-        <!--<param-name>contextClass</param-name>-->
-        <!--<param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>-->
-    <!--</context-param>-->
-
-    <!--<context-param>-->
-        <!--<param-name>contextConfigLocation</param-name>-->
-        <!--<param-value>org.rest.spring.root</param-value>-->
-    <!--</context-param>-->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
     <servlet>
         <servlet-name>api</servlet-name>
-        <servlet-class>
-            org.springframework.web.servlet.DispatcherServlet
-        </servlet-class>
-        <init-param>
-            <param-name>contextClass</param-name>
-            <param-value>
-                org.springframework.web.context.support.AnnotationConfigWebApplicationContext
-            </param-value>
-        </init-param>
-        <init-param>
-            <param-name>contextConfigLocation</param-name>
-            <param-value>org.rest.spring.rest</param-value>
-        </init-param>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
@@ -49,8 +22,8 @@
         <url-pattern>/api/*</url-pattern>
     </servlet-mapping>
 
-    <welcome-file-list>
-        <welcome-file/>
-    </welcome-file-list>
+    <!--<welcome-file-list>-->
+        <!--<welcome-file/>-->
+    <!--</welcome-file-list>-->
 
 </web-app>
