--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,8 +22,8 @@
         <url-pattern>/api/*</url-pattern>
     </servlet-mapping>
 
-    <!--<welcome-file-list>-->
-        <!--<welcome-file/>-->
-    <!--</welcome-file-list>-->
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 
 </web-app>
