--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,11 @@ jettyRun.contextPath = '/'
 
 repositories { mavenCentral() }
 
+configurations {
+//    all*.exclude module: 'slf4j-log4j12'
+//    all*.exclude group: 'ch.qos.logback', module: 'logback-classic'
+}
+
 dependencies {
     compile 'ch.qos.logback:logback-classic:1.0.13'
     compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
