--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     compile 'ch.qos.logback:logback-classic:1.0.13'
     compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
     compile 'com.mangofactory:swagger-springmvc:0.5.3'
+    compile 'org.springframework.security.oauth:spring-security-oauth2:1.0.5.RELEASE'
     runtime 'com.fasterxml.jackson.core:jackson-databind:2.2.2'
     runtime 'javax.xml.bind:jaxb-api:2.2.9'
 
