--- a/build.gradle
+++ b/build.gradle
@@ -5,29 +5,28 @@ apply plugin: 'jetty'
 sourceCompatibility = 1.6
 jettyRun.contextPath = '/'
 
-repositories { mavenCentral() }
+repositories {
+    mavenCentral()
+}
 
 configurations {
-//    all*.exclude module: 'slf4j-log4j12'
-//    all*.exclude group: 'ch.qos.logback', module: 'logback-classic'
+    all*.exclude group: 'ch.qos.logback'
 }
 
 dependencies {
-    compile 'ch.qos.logback:logback-classic:1.0.13'
-    compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
-    compile 'com.mangofactory:swagger-springmvc:0.5.3'
-    compile 'org.springframework.security.oauth:spring-security-oauth2:1.0.5.RELEASE'
+    compile 'org.springframework:spring-webmvc:3.2.3.RELEASE',
+            'com.mangofactory:swagger-springmvc:0.5.3',
+            'org.springframework.security.oauth:spring-security-oauth2:1.0.5.RELEASE'
 
-    runtime 'com.fasterxml.jackson.core:jackson-databind:2.2.2'
-    runtime 'javax.xml.bind:jaxb-api:2.2.9'
+    runtime 'com.fasterxml.jackson.core:jackson-databind:2.2.2',
+            'javax.xml.bind:jaxb-api:2.2.9'
 
-    providedCompile 'org.eclipse.jetty:jetty-servlet:8.1.9.v20130131'
+    providedCompile 'org.eclipse.jetty:jetty-webapp:8.1.3.v20120416'
 
-    testCompile 'com.restfuse:com.eclipsesource.restfuse:1.2.0'
-    testCompile 'junit:junit:4.11'
-    testCompile 'org.eclipse.jetty:jetty-webapp:8.1.9.v20130131'
-    testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
-    testCompile 'com.google.code.gson:gson:2.2.4'
+    testCompile 'junit:junit:4.11',
+            'org.springframework:spring-test:3.2.3.RELEASE',
+            'com.restfuse:com.eclipsesource.restfuse:1.2.0',
+            'com.google.code.gson:gson:2.2.4'
 }
 
 buildscript {
@@ -51,5 +50,3 @@ war {
 war.dependsOn markdownToHtml
 
 defaultTasks 'war'
-
-
