Added specific logging configuration for the jetty instance and refactored logging in log4j minor refactoring in RestHeaderInterceptor

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,6 @@
-log4j.rootLogger=warn, console
-log4j.logger.jobengine=debug
-log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%p|%m%n
+log4j.logger.jobengine = debug
+log4j.logger.jobengine.application.RestHeaderInterceptor = info
+log4j.rootLogger = warn, stdout
+log4j.appender.stdout = org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern = %d{yyyy-MM-dd HH:mm:ss}|%-5p|%c{1}|%L|%m%n
