Using sporing instead of restfuse to test REST without the HTTP burden

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ buildscript {
     }
 }
 
+
+[compileJava, compileTestJava]*.options*.compilerArgs = ['-Xlint:all']
+
 apply plugin: 'markdown'
 
 war {
