--- a/build.gradle
+++ b/build.gradle
@@ -11,22 +11,22 @@ repositories {
 
 configurations {
     all*.exclude group: 'ch.qos.logback'
+    all*.exclude group: 'javax.servlet', module: 'servlet-api', version: '2.5'
 }
 
 dependencies {
     compile 'org.springframework:spring-webmvc:3.2.3.RELEASE',
             'com.mangofactory:swagger-springmvc:0.5.3',
             'org.springframework.security.oauth:spring-security-oauth2:1.0.5.RELEASE'
-
-    runtime 'com.fasterxml.jackson.core:jackson-databind:2.2.2',
-            'javax.xml.bind:jaxb-api:2.2.9'
-
-    providedCompile 'org.eclipse.jetty:jetty-webapp:8.1.3.v20120416'
+    providedCompile 'com.fasterxml.jackson.core:jackson-databind:2.2.2',
+            'javax.xml.bind:jaxb-api:2.2.9',
+            'javax.servlet:javax.servlet-api:3.0.1'
 
     testCompile 'junit:junit:4.11',
             'org.springframework:spring-test:3.2.3.RELEASE',
             'com.restfuse:com.eclipsesource.restfuse:1.2.0',
-            'com.google.code.gson:gson:2.2.4'
+            'com.google.code.gson:gson:2.2.4',
+            'org.eclipse.jetty:jetty-webapp:8.1.3.v20120416'
 }
 
 buildscript {
