package application -> app to be concise

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.logger.jobengine = debug
-log4j.logger.jobengine.application.RestHeaderInterceptor = info
+log4j.logger.jobengine.app.RestHeaderInterceptor = info
 log4j.rootLogger = warn, stdout
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
