--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,8 @@ configurations {
 dependencies {
     compile 'org.springframework:spring-webmvc:3.2.3.RELEASE',
             'com.mangofactory:swagger-springmvc:0.5.3',
-            'org.springframework.security.oauth:spring-security-oauth2:1.0.5.RELEASE'
-    providedCompile 'com.fasterxml.jackson.core:jackson-databind:2.2.2',
+            'org.springframework.security.oauth:spring-security-oauth2:1.0.5.RELEASE',
+            'com.fasterxml.jackson.core:jackson-databind:2.2.2',
             'javax.xml.bind:jaxb-api:2.2.9'
 
     compile 'javax.servlet:javax.servlet-api:3.0.1'
