--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ dependencies {
             'com.mangofactory:swagger-springmvc:0.5.3',
             'org.springframework.security.oauth:spring-security-oauth2:1.0.5.RELEASE',
             'com.fasterxml.jackson.core:jackson-databind:2.2.2',
-            'javax.xml.bind:jaxb-api:2.2.9'
+            'javax.xml.bind:jaxb-api:2.2.9',
+            'org.resthub:springmvc-router:1.1.1'
 
     compile 'javax.servlet:javax.servlet-api:3.0.1'
 
