--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,14 @@ configurations {
 dependencies {
     compile 'org.springframework:spring-webmvc:3.2.3.RELEASE',
             'com.mangofactory:swagger-springmvc:0.5.3',
-            'org.springframework.security.oauth:spring-security-oauth2:1.0.5.RELEASE'
+            'com.sun.jersey:jersey-bundle:1.17.1',
+            'org.springframework.security.oauth:spring-security-oauth2:1.0.5.RELEASE',
+            'com.sun.jersey:jersey-json:1.17.1'
+
+    compile('com.sun.jersey.contribs:jersey-spring:1.17.1') {
+        exclude group: 'org.springframework'
+    }
+
     providedCompile 'com.fasterxml.jackson.core:jackson-databind:2.2.2',
             'javax.xml.bind:jaxb-api:2.2.9'
 
@@ -27,7 +34,10 @@ dependencies {
             'org.springframework:spring-test:3.2.3.RELEASE',
             'com.restfuse:com.eclipsesource.restfuse:1.2.0',
             'com.google.code.gson:gson:2.2.4',
-            'org.eclipse.jetty:jetty-webapp:8.1.3.v20120416'
+            'org.eclipse.jetty:jetty-webapp:8.1.3.v20120416',
+            'com.sun.jersey.jersey-test-framework:jersey-test-framework-core:1.17.1',
+            'com.sun.jersey.jersey-test-framework:jersey-test-framework-grizzly2:1.17.1',
+            'com.sun.jersey:jersey-grizzly2-servlet:1.17.1'
 }
 
 buildscript {
