--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
         exclude group: 'org.springframework'
     }
 
-    providedCompile 'com.fasterxml.jackson.core:jackson-databind:2.2.2',
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.2.2',
             'javax.xml.bind:jaxb-api:2.2.9'
 
     compile 'javax.servlet:javax.servlet-api:3.0.1'
