--- a/build.gradle
+++ b/build.gradle
@@ -16,26 +16,19 @@ configurations {
 
 dependencies {
     compile 'org.springframework:spring-webmvc:3.2.3.RELEASE',
-            'com.mangofactory:swagger-springmvc:0.5.3',
-            'com.sun.jersey:jersey-bundle:1.17.1',
-            'org.springframework.security.oauth:spring-security-oauth2:1.0.5.RELEASE',
-            'com.sun.jersey:jersey-json:1.17.1',
             'com.fasterxml.jackson.core:jackson-databind:2.2.2',
-            'javax.xml.bind:jaxb-api:2.2.9'
-
-    compile('com.sun.jersey.contribs:jersey-spring:1.17.1') {
-        exclude group: 'org.springframework'
-    }
-    compile 'javax.servlet:javax.servlet-api:3.0.1'
+            'javax.xml.bind:jaxb-api:2.2.9',
+            'javax.servlet:javax.servlet-api:3.0.1',
+            'org.jboss.resteasy:resteasy-spring:3.0.2.Final',
+            'org.slf4j:slf4j-api:1.7.5',
+            'org.slf4j:slf4j-log4j12:1.7.5',
+            'com.google.guava:guava:14.0.1',
+            'org.jboss.resteasy:resteasy-jackson2-provider:3.0.2.Final'
 
     testCompile 'junit:junit:4.11',
             'org.springframework:spring-test:3.2.3.RELEASE',
             'com.restfuse:com.eclipsesource.restfuse:1.2.0',
-            'com.google.code.gson:gson:2.2.4',
-            'org.eclipse.jetty:jetty-webapp:8.1.3.v20120416',
-            'com.sun.jersey.jersey-test-framework:jersey-test-framework-core:1.17.1',
-            'com.sun.jersey.jersey-test-framework:jersey-test-framework-grizzly:1.17.1'
-//            'com.sun.jersey.jersey-test-framework:jersey-test-framework-inmemory:1.17.1'
+            'org.eclipse.jetty:jetty-webapp:8.1.3.v20120416'
 }
 
 buildscript {
