--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,8 @@ dependencies {
             'org.slf4j:slf4j-api:1.7.5',
             'org.slf4j:slf4j-log4j12:1.7.5',
             'com.google.guava:guava:14.0.1',
-            'org.jboss.resteasy:resteasy-jackson2-provider:3.0.2.Final'
+            'org.jboss.resteasy:resteasy-jackson2-provider:3.0.2.Final',
+            'org.jboss.resteasy:resteasy-cache-core:3.0.2.Final'
 
     testCompile 'junit:junit:4.11',
             'org.springframework:spring-test:3.2.3.RELEASE',
