--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,16 @@
         <param-value>classpath:applicationContext.xml</param-value>
     </context-param>
 
+    <filter>
+        <filter-name>etagFilter</filter-name>
+        <filter-class>org.springframework.web.filter.ShallowEtagHeaderFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>etagFilter</filter-name>
+        <url-pattern>/api/*</url-pattern>
+    </filter-mapping>
+
     <!--<context-param>-->
         <!--<param-name>resteasy.media.type.param.mapping</param-name>-->
         <!--<param-value>contentType</param-value>-->
@@ -84,15 +94,6 @@
         <!--<url-pattern>/api/*</url-pattern>-->
     <!--</filter-mapping>-->
 
-    <!--<filter>-->
-        <!--<filter-name>etagFilter</filter-name>-->
-        <!--<filter-class>org.springframework.web.filter.ShallowEtagHeaderFilter</filter-class>-->
-    <!--</filter>-->
-
-    <!--<filter-mapping>-->
-        <!--<filter-name>etagFilter</filter-name>-->
-        <!--<url-pattern>/api/*</url-pattern>-->
-    <!--</filter-mapping>-->
 
     <!--<servlet>-->
         <!--<servlet-name>api</servlet-name>-->
