--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,10 @@ dependencies {
             'org.slf4j:slf4j-log4j12:1.7.5',
             'com.google.guava:guava:14.0.1',
             'org.jboss.resteasy:resteasy-jackson2-provider:3.0.2.Final',
-            'org.jboss.resteasy:resteasy-cache-core:3.0.2.Final'
+            'org.jboss.resteasy:resteasy-cache-core:3.0.2.Final',
+            'junit:junit:4.11'
 
-    testCompile 'junit:junit:4.11',
-            'org.springframework:spring-test:3.2.3.RELEASE',
+    testCompile 'org.springframework:spring-test:3.2.3.RELEASE',
             'com.restfuse:com.eclipsesource.restfuse:1.2.0',
             'org.eclipse.jetty:jetty-webapp:8.1.3.v20120416'
 }
