Fixed testing issues

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,8 +22,7 @@
             jobengine.app.request.HeaderRequestFilter,
             jobengine.app.response.HeaderResponseFilter,
             jobengine.app.response.ObjectNotFoundExceptionHandler,
-            jobengine.app.response.RestExceptionHandler,
-            jobengine.app.response.GenericExceptionHandler
+            jobengine.app.response.RestExceptionHandler
         </param-value>
     </context-param>
 
