Deleted useless class Bootstrap Upgraded swagger version to 1.3-RC Reviewed web.xml

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,5 @@
 log4j.logger.jobengine.app = debug
+log4j.logger.swagger = debug
 log4j.logger.jobengine.app.RestHeaderInterceptor = info
 log4j.logger.org.jboss.resteasy.plugins.server = debug
 log4j.logger.org.jboss.resteasy.core = debug
