--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ dependencies {
             'junit:junit:4.11',
             'org.springframework:spring-test:3.2.3.RELEASE',
             'org.jmock:jmock-legacy:2.6.0',
-            'com.wordnik:swagger-jaxrs_2.10:1.3.0-RC3'
+            'com.wordnik:swagger-jaxrs_2.10:1.3.0-RC3',
+            'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.2.2'
 
     testCompile  'com.restfuse:com.eclipsesource.restfuse:1.2.0',
             'org.eclipse.jetty:jetty-webapp:8.1.3.v20120416'
